--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -14,6 +14,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    gap: 20px;
 }
 .login>.right{
     width: 40%;
@@ -80,8 +81,43 @@
 .forgot{
     width: 100%;
     height: 100vh;
+    padding: 20px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.forgot>.left{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.forgot>.right{
+    width: 40%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: start; */
+    /* justify-content: flex-start; */
+    gap: 20px;
+}
+
+
+/* User Profile  */
+
+.userprofile{
+    width: 100%;
+    height: 100vh;
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.profile-form{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+
 }
