--- a/src/components/Mail/index.css
+++ b/src/components/Mail/index.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 .manual>.card{
     width: 80%;
@@ -19,7 +20,7 @@
     justify-content: space-evenly;
 }
 .ql-container{
-    height: 100px;
+    height: 150px;
 }
 .btn{
     border: none;
