--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -121,3 +121,15 @@
     flex-direction: row;
 
 }
+.login-main{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.formm{
+    
+}
